cluster/cloud/localstack.yml
apiVersion: v1
kind: Service
metadata:
  name: localstack
spec:
  type: ClusterIP
  selector:
    app: localstack
  ports:
    - port: 4566
      targetPort: 4566
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack-pro:latest
          ports:
            - containerPort: 4566
          volumeMounts:
            - name: data
              mountPath: /var/lib/localstack
        - name: dind
          image: docker:dind
          securityContext:
            privileged: true
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: localstack
        - name: dind-storage
          emptyDir: {}
