cluster/cloud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "127.0.0.1/32"
spec:
  ingressClassName: nginx
  rules:
    - host: localstack.zagoapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 4566
  tls:
    - hosts:
        - localstack.zagoapps.com
      secretName: localstack-tls
